<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Segnapunti Burraco</string>
    <string name="conf_name">Configurazione</string>
    <string name="title_activity_add_point">Aggiungi punti</string>
    <string name="title_activity_summary">SummaryActivity</string>

    <!-- Opzioni -->
    <string name="reset">Cancella</string>
    <string name="save">Salva</string>
    <string name="exit">Esci</string>
    <string name="close">Chiudi</string>
    <string name="resetAll">Riavvia</string>

    <!-- Label -->
    <string name="configurazione">Configurazione Team</string>
    <string name="gameSingolo">1 vs 1</string>
    <string name="gameDoppio">2 vs 2</string>
    <string name="teamAName">Team A</string>
    <string name="VS">VS</string>
    <string name="teamBName">Team B</string>
    <string name="cup_description">Cup</string>
    <string name="startingScore">0</string>
    <string name="listaPuntiA">listaPuntiA</string>
    <string name="listaGameA">listaGameA</string>
    <string name="listaPuntiB">listaPuntiB</string>
    <string name="listaGameB">listaGameB</string>
    <string name="risultatoB">risultatoB</string>
    <string name="risultatoA">risultatoA</string>
    <string name="risComplessivoB">risComplessivoB</string>
    <string name="risComplessivoA">risComplessivoA</string>
    <string name="setPoint">Segna</string>
    <string name="setPointA">segnaA</string>
    <string name="setPointB">segnaB</string>

    <!-- EditText -->
    <string name="nomeGiocatore11">giocatore 1A</string>
    <string name="nomeGiocatore12">giocatore 2A</string>
    <string name="nomeGiocatore21">giocatore 1B</string>
    <string name="nomeGiocatore22">giocatore 2B</string>
    <string name="puntiBase">Base</string>
    <string name="puntiCarte">Carte</string>


    <!-- Utility -->
    <string name="numberPlayerActivity">yeapp.com.burracoscore.numberPlayer</string>
    <string name="teamA">teamA</string>
    <string name="teamB">teamB</string>
    <string name="description">Lista Punti</string>
    <string name="puntiChiusura">Chiusura</string>
    <string name="puntiMazzetto">Mazzetto</string>
    <string name="dialogWinner">dialogWinner</string>


</resources>
