<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContenutoPerfetto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeamLogin">

    <!--<TextView
        android:id="@+id/typeGameConf"
        style="@style/ContenutoPerfetto.CentratoOrizzontale.Centrato"
        android:layout_width="fill_parent"
        android:text_layout="@string/configurazione"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/GrigioPerNero"
        android:textStyle="bold" />-->

    <RelativeLayout
        style="@style/ContenutoParente.Gravitato"
        android:layout_width="fill_parent">

        <Button
            android:id="@+id/singleConf"
            style="@style/ContenutoPerfetto.Gravitato"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/lowMargin"
            android:background="@drawable/shape_button"
            android:clickable="true"
            android:drawableLeft="@drawable/head"
            android:drawableRight="@drawable/head"
            android:enabled="true"
            android:text="@string/gameSingolo"
            android:textColor="@drawable/text_layout"/>

        <Button
            android:id="@+id/coupleConf"
            style="@style/ContenutoPerfetto.Gravitato"
            android:layout_width="match_parent"
            android:layout_below="@+id/singleConf"
            android:layout_marginTop="@dimen/lowMargin"
            android:background="@drawable/shape_button"
            android:clickable="true"
            android:drawableLeft="@drawable/d_head"
            android:drawableRight="@drawable/d_head"
            android:text="@string/gameDoppio"
            android:textColor="@drawable/text_layout"/>

        <RelativeLayout
            style="@style/ContenutoPerfetto"
            android:layout_above="@+id/salvaConf"
            android:layout_below="@+id/coupleConf">

            <GridLayout
                android:id="@+id/gridNames"
                style="@style/ContenutoPerfetto"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/lowMargin"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/lowMargin"
                android:paddingRight="@dimen/lowMargin"
                android:rowCount="4"
                android:rowOrderPreserved="false"
                android:saveEnabled="true">

                <TextView
                    android:id="@+id/teamAConf"
                    style="@style/ContenutoPerfetto.Gravitato"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_rowSpan="2"
                    android:enabled="false"
                    android:text="@string/teamAName"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/SquadraA" />

                <EditText
                    android:id="@+id/giocatore11"
                    style="@style/ContenutoPerfetto.GravitatoPieno.TestoGenerico"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/insignificantMargin"
                    android:layout_marginLeft="@dimen/lowMargin"
                    android:layout_row="0"
                    android:background="@drawable/shape_edittext"
                    android:enabled="false"
                    android:text="@string/nomeGiocatore11" />

                <EditText
                    android:id="@+id/giocatore12"
                    style="@style/ContenutoPerfetto.GravitatoPieno.TestoGenerico"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/lowMargin"
                    android:layout_row="1"
                    android:background="@drawable/shape_edittext"
                    android:enabled="false"
                    android:text="@string/nomeGiocatore12" />

                <TextView
                    android:id="@+id/teamBConf"
                    style="@style/ContenutoPerfetto.Gravitato"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_rowSpan="2"
                    android:enabled="false"
                    android:text="@string/teamBName"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/SquadraB" />

                <EditText
                    android:id="@+id/giocatore21"
                    style="@style/ContenutoPerfetto.GravitatoPieno.TestoGenerico"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/insignificantMargin"
                    android:layout_marginLeft="@dimen/lowMargin"
                    android:layout_marginTop="@dimen/lowMargin"
                    android:layout_row="2"
                    android:background="@drawable/shape_edittext"
                    android:enabled="false"
                    android:text="@string/nomeGiocatore21" />

                <EditText
                    android:id="@+id/giocatore22"
                    style="@style/ContenutoPerfetto.GravitatoPieno.TestoGenerico"
                    android:layout_column="1"
                    android:layout_marginLeft="@dimen/lowMargin"
                    android:layout_row="3"
                    android:background="@drawable/shape_edittext"
                    android:enabled="false"
                    android:text="@string/nomeGiocatore22" />
            </GridLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/salvaConf"
            style="@style/ContenutoPerfetto.Gravitato"
            android:layout_width="@dimen/buttonWidthEq"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/insignificantMargin"
            android:background="@drawable/shape_button"
            android:enabled="false"
            android:paddingLeft="@dimen/insignificantMargin"
            android:paddingRight="@dimen/insignificantMargin"
            android:saveEnabled="true"
            android:text="@string/save"
            android:textColor="@drawable/text_layout" />

        <Button
            android:id="@+id/resetConf"
            style="@style/ContenutoPerfetto.Gravitato"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_button"
            android:enabled="false"
            android:paddingLeft="@dimen/insignificantMargin"
            android:paddingRight="@dimen/insignificantMargin"
            android:text="@string/reset"
            android:textColor="@drawable/text_layout" />

        <Button
            android:id="@+id/chiudiConf"
            style="@style/ContenutoPerfetto.Gravitato"
            android:layout_width="@dimen/buttonWidthEq"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/insignificantMargin"
            android:background="@drawable/shape_button"
            android:enabled="true"
            android:paddingLeft="@dimen/insignificantMargin"
            android:paddingRight="@dimen/insignificantMargin"
            android:saveEnabled="true"
            android:text="@string/close"
            android:textColor="@drawable/text_layout" />

    </RelativeLayout>

</LinearLayout>
