<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="10sp"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="1"
    tools:context="yeapp.com.burracoscore.SummaryActivity">

    <TextView
        android:id="@+id/teamASummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginRight="70sp"
        android:layout_toLeftOf="@+id/tvstSummary"
        android:gravity="center"
        android:text="@string/teamAName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvstSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"

        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/VS"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/teamBSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"

        android:layout_alignParentStart="false"
        android:layout_gravity="right"
        android:layout_marginLeft="70sp"
        android:layout_toRightOf="@+id/tvstSummary"
        android:gravity="center"
        android:text="@string/teamBName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonSection"
        android:layout_below="@+id/teamBSummary"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ListView
                android:id="@+id/listView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeFinaleSummary">

        <Button
            android:id="@+id/setTeamA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:text="@string/setPoint" />

        <Button
            android:id="@+id/setTeamB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:text="@string/setPoint" />
    </LinearLayout>

    <!--<ScrollView-->
    <!--android:id="@+id/scrollView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_above="@+id/relativeFinaleSummary"-->
    <!--android:layout_below="@+id/teamBSummary"-->
    <!--android:layout_marginTop="20sp">-->

    <!--&lt;!&ndash;android:layout_alignParentLeft="true">&ndash;&gt;-->

    <!--</ScrollView>-->
    <RelativeLayout
        android:id="@+id/relativeFinaleSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/punteggioASummary"
            style="@style/ResultNumberBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_marginRight="60sp"
            android:layout_toLeftOf="@+id/coppaSummary"
            android:gravity="center"
            android:text="@string/startingScore" />

        <TextView
            android:id="@+id/punteggioBSummary"
            style="@style/ResultNumberViolet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60sp"
            android:layout_toRightOf="@+id/coppaSummary"
            android:gravity="center"
            android:text="@string/startingScore" />

        <ImageView
            android:id="@+id/coppaSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cup_description"
            android:src="@drawable/coppa_trasp_nera" />
        <!-- SAREBBE FIGO AVERE UNA PROGRESS BAR VERTICALE MA BISOGNA ESTENDERE QUELLA ORIGINALE-->
    </RelativeLayout>

</RelativeLayout>


