
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singoloNomi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/coupleConf"
    android:layout_marginTop="@dimen/mediumMargin">

    <GridLayout
        android:id="@+id/gridNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/lowMargin"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="@dimen/insignificantMargin"
        android:paddingLeft="@dimen/lowMargin"
        android:paddingRight="@dimen/lowMargin"
        android:rowCount="2"
        android:rowOrderPreserved="false"
        android:saveEnabled="true">

        <TextView
            android:id="@+id/teamAConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_row="0"
            android:enabled="false"
            android:text="@string/teamAName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Rosso" />

        <EditText
            android:id="@+id/giocatore11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="@dimen/insignificantMargin"
            android:layout_marginLeft="@dimen/lowMargin"
            android:layout_row="0"
            android:autoText="false"
            android:background="@drawable/shape_edittext"
            android:enabled="false"
            android:inputType="textCapWords|textPersonName|textAutoComplete"
            android:maxLength="20"
            android:saveEnabled="true"
            android:text="@string/nomeGiocatore11" />

        <!--<EditText-->
            <!--android:id="@+id/giocatore12"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_column="1"-->
            <!--android:layout_gravity="fill"-->
            <!--android:layout_marginLeft="@dimen/lowMargin"-->
            <!--android:layout_row="1"-->
            <!--android:autoText="false"-->
            <!--android:background="@drawable/shape_edittext"-->
            <!--android:enabled="false"-->
            <!--android:inputType="textCapWords|textPersonName|textAutoComplete"-->
            <!--android:maxLength="20"-->
            <!--android:saveEnabled="true"-->
            <!--android:text="@string/nomeGiocatore12" />-->

        <TextView
            android:id="@+id/teamBConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/teamBName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blu" />

        <EditText
            android:id="@+id/giocatore21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="@dimen/insignificantMargin"
            android:layout_marginLeft="@dimen/lowMargin"
            android:layout_marginTop="@dimen/lowMargin"
            android:layout_row="1"
            android:autoText="false"
            android:background="@drawable/shape_edittext"
            android:enabled="false"
            android:inputType="textCapWords|textPersonName|textAutoComplete"
            android:maxLength="20"
            android:saveEnabled="true"
            android:text="@string/nomeGiocatore21" />

        <!--<EditText-->
            <!--android:id="@+id/giocatore22"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_column="1"-->
            <!--android:layout_gravity="fill"-->
            <!--android:layout_marginLeft="@dimen/lowMargin"-->
            <!--android:layout_row="3"-->
            <!--android:autoText="false"-->
            <!--android:background="@drawable/shape_edittext"-->
            <!--android:enabled="false"-->
            <!--android:inputType="textCapWords|textPersonName|textAutoComplete"-->
            <!--android:maxLength="20"-->
            <!--android:saveEnabled="true"-->
            <!--android:text="@string/nomeGiocatore22" />-->
    </GridLayout>
</RelativeLayout>